# OrderBookNasdaq

./: .gitignore  README.md
data/: README.md
docs/: glossary.md  itch50_rules.md  podman.md  realtime_lob_simulation_design.md
itch/: CMakeLists.txt  README.md
itch-playground/: README.md
itch-playground/scripts/: plot_orderbook_l2.py
itch/docs/: hdf5_snapshot_export.md  lob_performance_notes.md  messages_design.md  object_pool_design.md  project_structure.md  tutorial.md
itch/include/: book_snapshot.hpp  endian.hpp  fixed_ascii.hpp  formatter.hpp  frame_reader.hpp  l2_snapshot.hpp  l2_snapshot_collector.hpp  message_accessors.hpp  message_types.hpp  messages.hpp  object_pool.hpp  order_book.hpp  parser.hpp  stl.h  types.hpp
itch/src/: formatter.cpp  frame_reader.cpp  order_book.cpp  parser.cpp
itch/tests/: order_book_tests.cpp
itch/tools/: export_l2_snapshots.cpp  filter.cpp  parse_messages.cpp  snapshot_h5_writer.hpp
pysz-playground/: float_int_map_notes.md  generate_lob_test_data.py  lob.md  lob.py  lob_numba.py  lob_simple.py  lob_simple_notes.md  lob_simple_test.py  log_usage.py  pandera_tool_ideas.md  test_lob_numba.py
pysz-playground/test_data/: lob_events.csv
references/: README.md  data_source.md
